<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/grid"
        android:checkable="true"
        android:orderInCategory="100"
        android:title="@string/grid"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/sort"
        android:orderInCategory="200"
        android:title="@string/sort"
        app:showAsAction="never">

        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/sort_by_name"
                    android:title="@string/by_name_artist_group" />

                <item
                    android:id="@+id/sort_by_title"
                    android:title="@string/by_title" />

                <item
                    android:id="@+id/sort_by_year"
                    android:title="@string/by_year" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="300"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always" />
</menu>