<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/theme_settings"
        android:title="@string/theme">

        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/light_mode"
                    android:orderInCategory="100"
                    android:title="@string/light"
                    app:showAsAction="never" />

                <item
                    android:id="@+id/dark_mode"
                    android:orderInCategory="100"
                    android:title="@string/dark"
                    app:showAsAction="never" />

                <item
                    android:id="@+id/system_default"
                    android:orderInCategory="100"
                    android:title="@string/system_default"
                    app:showAsAction="never" />
            </group>
        </menu>
    </item>
</menu>